turn game into an object and added first functions

--- a/index.html
+++ b/index.html
@@ -16,16 +16,28 @@
 
 <body>
     <div class="container-fluid">
-<h1 class="game-title">
-    Star Wars Quick Battles
-</h1>
-<div class="characters"></div>
-<div class="your-character">
-    
-</div>
-<div class="enemies-available"></div>
-<div class="fight-section"></div>
-<div class="defensive-zone"></div>
+        <h1 class="game-title">
+            Star Wars RPG!
+        </h1>
+        <div class="container-fluid characters-section">
+            <h2 id="characters-title">Pick your Character</h2>
+        </div>
+        <div class="container-fluid your-character-secton">
+            <h2 id="your-character-title">You Chose</h2>
+        </div>
+        <div class="container-fluid enemies-available-section">
+            <h2 id="enemies-available-title">Pick Your Next Foe</h2>
+        </div>
+        <div class="container-fluid fight-section">
+            <button id="attack-button">ATTACK</button>
+        </div>
+        <div class="container-fluid defense-section">
+        </div>
+        <div class="container-fluid battle-info-section">
+        </div>
+        <div class="container-fluid restart-section">
+            <button id="restart-button">RESTART</button>
+        </div>
     </div>
 
 
