--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container-fluid characters-section">
             <h2 id="characters-title">Pick your Character</h2>
         </div>
-        <div class="container-fluid your-character-secton">
+        <div class="container-fluid your-character-section">
             <h2 id="your-character-title">You Chose</h2>
         </div>
         <div class="container-fluid enemies-available-section">
@@ -32,8 +32,13 @@
             <button id="attack-button">ATTACK</button>
         </div>
         <div class="container-fluid defense-section">
+            <h2 class="defense-titel">Defender</h2>
         </div>
-        <div class="container-fluid battle-info-section">
+        <div class="container-fluid" id="battle-info-section">
+            <h3 class="" id="attacker-health"></h3>
+            <h3 class="" id="defender-health"></h3>
+            <h3 class="" id="attacker-death">Next time have faith in the force</h3>
+            <h3 class="" id="defender-death">Your enemy has been defeated</h3>
         </div>
         <div class="container-fluid restart-section">
             <button id="restart-button">RESTART</button>
