added images, and clean up

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="container-fluid your-character-section">
             <h2 id="your-character-title">You Chose</h2>
-            <h3 class="" id="attacker-health"></h3>
+            <h3 class="health" id="attacker-health"></h3>
         </div>
         <div class="container-fluid enemies-available-section">
             <h2 id="enemies-available-title">Pick Your Next Foe</h2>
@@ -36,9 +36,9 @@
         </div>
         <div class="container-fluid" id="battle-info-section">
             
-            <h3 class="" id="defender-health"></h3>
-            <h3 class="" id="attacker-death">In the force, you must find balance...</h3>
-            <h3 class="" id="defender-death">Your enemy has been defeated</h3>
+            <h3 class="health" id="defender-health"></h3>
+            <h3 class="death" id="attacker-death">In the force, you must find balance...</h3>
+            <h3 class="death" id="defender-death">Your enemy has been defeated</h3>
         </div>
         <div class="container-fluid fight-section">
             <button id="attack-button">ATTACK</button>
